// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appended filtes should be present in history 1`] = `
"<li role=\\"separator\\" class=\\"divider\\"></li>
  
    
<li class=\\"history-menu\\">
  <a class=\\"cursor-pointer history-menu-item\\">
    <span class=\\"rawFilter hidden\\">
      default
    </span>
    <i class=\\"fa fa-home\\"></i>
    
      <span class=\\"label-list label label-info\\">
        default
      </span>
    
  </a>
</li>"
`;

exports[`appended filtes should be present in history 2`] = `
"<li class=\\"history-menu\\">
  <a class=\\"cursor-pointer history-menu-item\\">
    <span class=\\"rawFilter hidden\\">
      default
    </span>
    <i class=\\"fa fa-search\\"></i>
    
      <span class=\\"label-list label label-info\\">
        default
      </span>
    
  </a>
</li>

    
  


  <li role=\\"separator\\" class=\\"divider\\"></li>
  
    
<li class=\\"history-menu\\">
  <a class=\\"cursor-pointer history-menu-item\\">
    <span class=\\"rawFilter hidden\\">
      default
    </span>
    <i class=\\"fa fa-home\\"></i>
    
      <span class=\\"label-list label label-info\\">
        default
      </span>
    
  </a>
</li>"
`;

exports[`appended filtes should be present in history 3`] = `
"<li class=\\"history-menu\\">
  <a class=\\"cursor-pointer history-menu-item\\">
    <span class=\\"rawFilter hidden\\">
      default,bar
    </span>
    <i class=\\"fa fa-search\\"></i>
    
      <span class=\\"label-list label label-info\\">
        default
      </span>
    
      <span class=\\"label-list label label-info\\">
        bar
      </span>
    
  </a>
</li>

    
  
    
      
<li class=\\"history-menu\\">
  <a class=\\"cursor-pointer history-menu-item\\">
    <span class=\\"rawFilter hidden\\">
      default
    </span>
    <i class=\\"fa fa-search\\"></i>
    
      <span class=\\"label-list label label-info\\">
        default
      </span>
    
  </a>
</li>

    
  


  <li role=\\"separator\\" class=\\"divider\\"></li>
  
    
<li class=\\"history-menu\\">
  <a class=\\"cursor-pointer history-menu-item\\">
    <span class=\\"rawFilter hidden\\">
      default
    </span>
    <i class=\\"fa fa-home\\"></i>
    
      <span class=\\"label-list label label-info\\">
        default
      </span>
    
  </a>
</li>"
`;

exports[`appended filtes should be present in history 4`] = `
"<li class=\\"history-menu\\">
  <a class=\\"cursor-pointer history-menu-item\\">
    <span class=\\"rawFilter hidden\\">
      default,bar,@state=active
    </span>
    <i class=\\"fa fa-search\\"></i>
    
      <span class=\\"label-list label label-info\\">
        default
      </span>
    
      <span class=\\"label-list label label-info\\">
        bar
      </span>
    
      <span class=\\"label-list label label-info\\">
        @state=active
      </span>
    
  </a>
</li>

    
  
    
      
<li class=\\"history-menu\\">
  <a class=\\"cursor-pointer history-menu-item\\">
    <span class=\\"rawFilter hidden\\">
      default,bar
    </span>
    <i class=\\"fa fa-search\\"></i>
    
      <span class=\\"label-list label label-info\\">
        default
      </span>
    
      <span class=\\"label-list label label-info\\">
        bar
      </span>
    
  </a>
</li>

    
  
    
      
<li class=\\"history-menu\\">
  <a class=\\"cursor-pointer history-menu-item\\">
    <span class=\\"rawFilter hidden\\">
      default
    </span>
    <i class=\\"fa fa-search\\"></i>
    
      <span class=\\"label-list label label-info\\">
        default
      </span>
    
  </a>
</li>

    
  


  <li role=\\"separator\\" class=\\"divider\\"></li>
  
    
<li class=\\"history-menu\\">
  <a class=\\"cursor-pointer history-menu-item\\">
    <span class=\\"rawFilter hidden\\">
      default
    </span>
    <i class=\\"fa fa-home\\"></i>
    
      <span class=\\"label-list label label-info\\">
        default
      </span>
    
  </a>
</li>"
`;

exports[`appended filtes should be present in history 5`] = `
"<li class=\\"history-menu\\">
  <a class=\\"cursor-pointer history-menu-item\\">
    <span class=\\"rawFilter hidden\\">
      default,bar,@state=active
    </span>
    <i class=\\"fa fa-search\\"></i>
    
      <span class=\\"label-list label label-info\\">
        default
      </span>
    
      <span class=\\"label-list label label-info\\">
        bar
      </span>
    
      <span class=\\"label-list label label-info\\">
        @state=active
      </span>
    
  </a>
</li>

    
  
    
      
<li class=\\"history-menu\\">
  <a class=\\"cursor-pointer history-menu-item\\">
    <span class=\\"rawFilter hidden\\">
      default,bar
    </span>
    <i class=\\"fa fa-search\\"></i>
    
      <span class=\\"label-list label label-info\\">
        default
      </span>
    
      <span class=\\"label-list label label-info\\">
        bar
      </span>
    
  </a>
</li>

    
  
    
      
<li class=\\"history-menu\\">
  <a class=\\"cursor-pointer history-menu-item\\">
    <span class=\\"rawFilter hidden\\">
      default
    </span>
    <i class=\\"fa fa-search\\"></i>
    
      <span class=\\"label-list label label-info\\">
        default
      </span>
    
  </a>
</li>

    
  


  <li role=\\"separator\\" class=\\"divider\\"></li>
  
    
<li class=\\"history-menu\\">
  <a class=\\"cursor-pointer history-menu-item\\">
    <span class=\\"rawFilter hidden\\">
      default
    </span>
    <i class=\\"fa fa-home\\"></i>
    
      <span class=\\"label-list label label-info\\">
        default
      </span>
    
  </a>
</li>"
`;

exports[`appended filtes should be present in history 6`] = `
"<li class=\\"history-menu\\">
  <a class=\\"cursor-pointer history-menu-item\\">
    <span class=\\"rawFilter hidden\\">
      @state=active
    </span>
    <i class=\\"fa fa-search\\"></i>
    
      <span class=\\"label-list label label-info\\">
        @state=active
      </span>
    
  </a>
</li>

    
  
    
      
<li class=\\"history-menu\\">
  <a class=\\"cursor-pointer history-menu-item\\">
    <span class=\\"rawFilter hidden\\">
      default,bar,@state=active
    </span>
    <i class=\\"fa fa-search\\"></i>
    
      <span class=\\"label-list label label-info\\">
        default
      </span>
    
      <span class=\\"label-list label label-info\\">
        bar
      </span>
    
      <span class=\\"label-list label label-info\\">
        @state=active
      </span>
    
  </a>
</li>

    
  
    
      
<li class=\\"history-menu\\">
  <a class=\\"cursor-pointer history-menu-item\\">
    <span class=\\"rawFilter hidden\\">
      default,bar
    </span>
    <i class=\\"fa fa-search\\"></i>
    
      <span class=\\"label-list label label-info\\">
        default
      </span>
    
      <span class=\\"label-list label label-info\\">
        bar
      </span>
    
  </a>
</li>

    
  


  <li role=\\"separator\\" class=\\"divider\\"></li>
  
    
<li class=\\"history-menu\\">
  <a class=\\"cursor-pointer history-menu-item\\">
    <span class=\\"rawFilter hidden\\">
      default
    </span>
    <i class=\\"fa fa-home\\"></i>
    
      <span class=\\"label-list label label-info\\">
        default
      </span>
    
  </a>
</li>"
`;

exports[`default filter should be in history after setting filter to foo 1`] = `
"<li role=\\"separator\\" class=\\"divider\\"></li>
  
    
<li class=\\"history-menu\\">
  <a class=\\"cursor-pointer history-menu-item\\">
    <span class=\\"rawFilter hidden\\">
      default
    </span>
    <i class=\\"fa fa-home\\"></i>
    
      <span class=\\"label-list label label-info\\">
        default
      </span>
    
  </a>
</li>"
`;
